plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/trailngLabel.kt
object Foo {
    @JvmStatic
    fun main(args: Array<String>) {
    }
}
